--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
             <p>Rows: <input type="number" id="rows" placeholder="10" value="10"></p>
             <p>Cols: <input type="number" id="cols" placeholder="10" value="10"></p>
             <button onclick="makeMaze('auto')">Automatic maze</button>
-            <button onclick="makeMaze('manual')">Manual maze (not so good on mazes with manny fields :) / ther might come a zoom function which could make it work tho)</button>
+            <button onclick="makeMaze('open')">Manual open maze (not so good on mazes with manny fields :) / ther might come a zoom function which could make it work tho)</button>
+            <button onclick="makeMaze('closed')">Manual closed maze (not so good on mazes with manny fields :) / ther might come a zoom function which could make it work tho)</button>
+
         </div>
         <div id="maze" style="width: 80vw; height:80vh; display: inline-block; vertical-align: top;"></div>
         <div id="checklistCon" style="display: inline-block; vertical-align: top; width: 15vw;"></div>
