--- a/index.html
+++ b/index.html
@@ -7,19 +7,21 @@
         <title></title>
         <meta name="description" content="MazeGame">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
         <link rel="stylesheet" href="main.css">
     </head>
-    <body onload="makeMaze('open')">
-        <div id="setup" style="display: block;">
-            <p>Rows: <input type="number" id="rows" placeholder="10" value="10"></p>
-            <p>Cols: <input type="number" id="cols" placeholder="10" value="10"></p>
-            <button onclick="makeMaze('auto')">Automatic maze</button>
-            <button onclick="makeMaze('open')">Manual open maze (not so good on mazes with manny fields :) / ther might come a zoom function which could make it work tho)</button>
-            <button onclick="makeMaze('closed')">Manual closed maze (not so good on mazes with manny fields :) / ther might come a zoom function which could make it work tho)</button>
+    <body onload="makeMaze('open')" style="overflow: hidden;">
 
+        <div class="container-fluid bg-primary text-white fixed-top" id="checklistCon"></div>
+        
+        <div class="container-fluid p-0" style="position: relative; z-index:0; width: 100vw;">
+            <div class="table-responsive" id="maze" style="height: 93.5vh; display: inline-block; width:100vw;"></div>
         </div>
-        <div id="maze" style="width: 80vw; height:80vh; display: inline-block; vertical-align: top;"></div>
-        <div id="checklistCon" style="display: inline-block; vertical-align: top; width: 15vw; z-index: 8;"></div>
         
         <script src="main.js"></script>
     </body>
