Split up the djikstra code in to seperate file

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <div class="table-responsive" id="maze" style="height: 93.5vh; display: inline-block; width:100vw;"></div>
         </div>
         
+        <script src="djikstra.js"></script>
         <script src="main.js"></script>
     </body>
 </html>
