--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
         <div class="container-fluid bg-primary text-white fixed-top" id="checklistCon"></div>
         
-        <div class="container-fluid p-0" style="position: relative; z-index:0; width: 100vw;">
-            <div class="table-responsive" id="maze" style="height: 93.5vh; display: inline-block; width:100vw;"></div>
+        <div class="container-fluid p-0" style="position: relative; z-index:0; width: 100vw; margin:0;">
+            <div class="table p-0 m-0" id="maze" style="height: 100vh; width:100vw; margin:0px;"></div>
         </div>
         
         <script src="djikstra.js"></script>
