a bit more design, basic bug fixes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <link rel="stylesheet" href="main.css">
     </head>
-    <body onload="makeMaze('open')" style="overflow: hidden;">
+    <body onload="makeMaze('open')">
 
         <div class="container-fluid bg-primary text-white fixed-top" id="checklistCon"></div>
         
