--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
 
         <div class="container-fluid bg-primary text-white fixed-top" id="checklistCon"></div>
         
-        <div class="container-fluid p-0" style="position: relative; z-index:0; width: 100vw; margin:0;">
-            <div class="table p-0 m-0" id="maze" style="height: 100vh; width:100vw; margin:0px;"></div>
+        <div class="container-fluid m-0 p-0">
+            <div class="row justify-content-center">
+                <div class="table p-0 m-0 col-sm-12 col-md-12 col-lg-10 col-xl-8" id="maze"></div>
+            </div>
         </div>
         
         <script src="djikstra.js"></script>
