made the footer

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
 
         <link rel="stylesheet" href="main.css">
+        <script src="https://kit.fontawesome.com/9c6c77c5d8.js" crossorigin="anonymous"></script>
+
     </head>
     <body onload="makeMaze('open')">
 
@@ -24,9 +26,7 @@
         </div>
 
         <div class="footer">
-            <footer style="text-align: center; height: 3vh;">
-                <h5>Laurits Bonde</h5>
-            </footer>
+            <h5>Laurits Bonde <a href="https://github.com/lauritsbonde/pathFinding.git"><i class="fab fa-github"></i></a></h5>
         </div>
 
         
