Made the A* algorithm, stiil needs some changes, it uses the djikstra found method which does not display, the shortest path. The array sorting could need some tweaking aswell.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <script src="https://kit.fontawesome.com/9c6c77c5d8.js" crossorigin="anonymous"></script>
 
     </head>
-    <body onload="makeMaze('open')">
+    <body onload="makeMaze('open', 30, 30)">
 
         <div id="checklistCon"></div>
         
@@ -30,6 +30,7 @@
         </div>
         
         <script src="djikstra.js"></script>
+        <script src="A*.js"></script>
         <script src="main.js"></script>
     </body>
 </html>
