made a new A*, still needs a visualisation of the final path

--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
         </div>
 
         <div class="footer">
-            <h5>Laurits Bonde <a href="https://github.com/lauritsbonde/pathFinding.git"><i class="fab fa-github"></i></a></h5>
+            <h5>Laurits Bonde <a href="https://github.com/lauritsbonde/pathFinding.git">Github</a></h5>
         </div>
         
+        <button style="position: absolute; right: 2%; top: 15%;" onclick="myclear()">testing</button>
+
         <script src="djikstra.js"></script>
         <script src="A*.js"></script>
         <script src="main.js"></script>
